<package>
  <name>pr2_shield_teleop</name>
  <version>1.0.1</version>
  <description>pr2_shield_teleop</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_shield_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David Gossow</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_teleop</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_teleop</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_teleop</test_depend> -->

</package>
